--- a/control
+++ b/control
@@ -2,7 +2,7 @@ Source: mplayer-trunk
 Section: graphics
 Priority: extra
 Maintainer: Kevin Goodsell <kevin-opensource@omegacrash.net>
-Build-Depends: dpatch, debhelper (>= 7), libncurses5-dev, libesd0-dev, liblircclient-dev, libgtk2.0-dev, libvorbis-dev, libsdl1.2-dev, sharutils, libasound2-dev (>= 1.0.1), liblzo-dev, gawk, libjpeg62-dev, libaudiofile-dev, libsmbclient-dev, libxv-dev, libpng3-dev, libgif-dev, libcdparanoia0-dev, libxvidcore4-dev, libdv-dev, liblivemedia-dev (>= 2004.05.01), libfreetype6-dev, em8300-headers, libgl1-mesa-dev | libgl-dev, libdvdread-dev, libdts-dev, libtheora-dev, libglu1-mesa-dev | libglu-dev, libfontconfig-dev, libxxf86dga-dev, libxinerama-dev, libxxf86vm-dev, libmp3lame-dev | liblame-dev, libxvmc-dev, libggi2-dev, ttf-bitstream-vera, libmpcdec-dev, libspeex-dev, libfribidi-dev, libfaac-dev (>=1.26), sed (>= 4.0), libaa1-dev, libcaca-dev, libx264-dev (>= 1:0.cvs20060720), libpulse-dev, libmad0-dev, ladspa-sdk, libdbus-glib-1-dev, libaudio-dev, liblzo2-dev, libdvdnav-dev, libopenal-dev, libjack-dev, libtwolame-dev, libsvga1-dev [i386 amd64], libenca-dev, gcc-4.2 [powerpc], libamrnb-dev, libamrwb-dev, libfaac-dev
+Build-Depends: dpatch, debhelper (>= 7), libncurses5-dev, libesd0-dev, liblircclient-dev, libgtk2.0-dev, libvorbis-dev, libsdl1.2-dev, sharutils, libasound2-dev (>= 1.0.1), liblzo-dev, gawk, libjpeg62-dev, libaudiofile-dev, libsmbclient-dev, libxv-dev, libpng3-dev, libgif-dev, libcdparanoia0-dev, libxvidcore4-dev, libdv-dev, liblivemedia-dev (>= 2004.05.01), libfreetype6-dev, em8300-headers, libgl1-mesa-dev | libgl-dev, libdvdread-dev, libdts-dev, libtheora-dev, libglu1-mesa-dev | libglu-dev, libfontconfig-dev, libxxf86dga-dev, libxinerama-dev, libxxf86vm-dev, libmp3lame-dev | liblame-dev, libxvmc-dev, libggi2-dev, ttf-bitstream-vera, libmpcdec-dev, libspeex-dev, libfribidi-dev, libfaac-dev (>=1.26), sed (>= 4.0), libaa1-dev, libcaca-dev, libx264-dev (>= 1:0.cvs20060720), libpulse-dev, libmad0-dev, ladspa-sdk, libdbus-glib-1-dev, libaudio-dev, liblzo2-dev, libdvdnav-dev, libopenal-dev, libjack-dev, libtwolame-dev, libsvga1-dev [i386 amd64], libenca-dev, gcc-4.2 [powerpc], libfaac-dev, libxext-dev
 Standards-Version: 3.8.0
 Homepage: http://www.mplayerhq.hu/
 
@@ -30,7 +30,7 @@ Description: The Ultimate Movie Player For Linux
  This version includes the Gtk GUI.
  .
  This package is based on the Medibuntu package and is built with faac
- and amr support enabled.
+ support enabled.
 
 Package: mplayer-trunk-nogui
 Architecture: any
@@ -56,7 +56,7 @@ Description: The Ultimate Movie Player For Linux
  This version comes with no GUI
  .
  This package is based on the Medibuntu package and is built with faac
- and amr support enabled.
+ support enabled.
 
 Package: mencoder-trunk
 Architecture: any
@@ -78,7 +78,7 @@ Description: MPlayer's Movie Encoder
  bugs and less stability.
  .
  This package is based on the Medibuntu package and is built with faac
- and amr support enabled.
+ support enabled.
 
 Package: mplayer-trunk-doc
 Architecture: all
