Add external repository revisions to changelog.

--- a/mplayer-trunk/debian_new/changelog.template
+++ b/mplayer-trunk/debian_new/changelog.template
@@ -1,5 +1,7 @@
 mplayer-trunk (#SVN_REV#-1) jaunty; urgency=low
 
   * Packaging mplayer from Subversion.
+  * External revisions:
+#EXTERNAL_REVS#
 
  -- Kevin Goodsell <kevin-opensource@omegacrash.net>  #DATE#
