--- a/mplayer-trunk/debian_new/rules
+++ b/mplayer-trunk/debian_new/rules
@@ -121,6 +121,10 @@ build-arch-stamp: build-gui-stamp build-nogui-stamp build-help-stamp
 	cp DOCS/man/en/mplayer.1 debian/mencoder.1
 	cp etc/example.conf debian/mplayer.conf
 	cp debian_upstream/mime debian/mplayer-trunk.mime
+	mkdir debian/skins
+	tar xf debian/Blue-1.7.tar.bz2 -C debian/skins
+	tar xf debian/clearplayer-0.9.tar.bz2 -C debian/skins
+	tar xf debian/mini-0.1.tar.bz2 -C debian/skins
 	touch $@
 
 clean: unpatch
@@ -134,7 +138,7 @@ clean: unpatch
 	rm -rf debian/nogui debian/gui building-gui-stamp building-nogui-stamp \
 		build-gui-stamp build-nogui-stamp debian/mencoder.1 \
 		debian/mplayer.conf debian/mplayer-trunk.mime config-gui-stamp \
-		config-nogui-stamp build-arch-stamp config-help-stamp
+		config-nogui-stamp build-arch-stamp config-help-stamp debian/skins
 
 	dh_clean 
 
